- Added Key SNMP Custom (KSC) Performance report builder, under 
  the Reports section of the GUI. Thx Dave M.
- fixed JNI calling on MacOSX 10.2 (jnilibs now build as 2-level
  namespace)
- updated logging to log4j 1.2.7
- fixed install.pl to consider type "6" as unicode as well (fixes
  unicode check on postgresql 7.3+)
- Added a two minute refresh to the Events list page. Thx Chris Y.
- Disallowed Null Search Text. Bug 536
- Added last day/week/month/year buttons to Performance and
  Response Time report pages. Bugs 546 and 618
- Corrected some SQL syntax in the Outage WebUI. Bug 681
- Increased the size of the contactinfo field in the usersnotified
  table from 32 to 64 characters. Bug 671
- Added an HTTP button for nodes and interfaces with the HTTP
  service. Bug 469
- Added Response Time links to node and interface pages. Bug 684
- Added an "order by" to a notifications SQL statement. Bug 648
- Added the option to define "match-any" as the IP address in 
  the poll-outages calendar.
- Added the ability to define RRAs for response time data per
  poller package. Bug 680
- Fixed a style sheet issue in the WebUI. Bug 568
- Added non-blocking I/O to HTTPS service.
- Added Response Time collection to the following Monitors:
  Citrix, FTP, HTTPS, IMAP, POP3, SMTP and TCP. Bug 693
- Allowed for the default action of generating a newSuspect event
  when a trap is received from an unknown IP address to be turned
  off.
- Associated traps with nodes. Bug 582
- Fixed small bug in Trap handler. Bug 676
- Fixed interface/node sorting bug (Derek Glidden) Bug 443

1.0.0 to 1.1.0
----------------------------------------------------------------------
- Added Event definitions for traps from 3Com, APC, Brocade, CIM,
  Cisco, Fore, HP, Intel, Microsoft, Novell, Oracle, SonicWall,
  and Xerox devices.
- Changed most capsd plugins and poller service monitors to 
  use non-blocking I/O in case of NoRouteToHost.
- Added the ability to choose NOT to notify on a given service