@@ -141,7 +141,7 @@ for OpenNMS.
 %package webapp
 Summary:	Web interface servlet for the OpenNMS network management platform
 Group:		Applications/System
-Requires:	tomcat4 >= 4.1.10, rrdtool, %{name} = %{version}-%{release}
+Requires:	tomcat4 >= 4.1.18, rrdtool, %{name} = %{version}-%{release}
 
 %description webapp
 The web UI for OpenNMS.
